# iit-data-analyst-agent

./: .replit  LICENSE  app.py  data_analyst_agent.py  duckdb_manager.py  langchain_agent.py  pyproject.toml  replit.md  statistical_analyzer.py  test_data.csv  tester.py  utils.py  visualization_generator.py  web_scraper.py
templates/: index.html
