[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "duckdb>=1.3.2",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "langchain-openai==0.2.11",
    "langchain>=0.3.27",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openai>=1.99.1",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "flask-cors==5.0.0",
]
